# pi_cg2d

./: Cargo.toml  README.md
src/: lib.rs  util.rs
src/boolean/boolean/: compare_segments.rs  compute_fields.rs  connect_edges.rs  divide_segment.rs  fill_queue.rs  helper.rs  mod.rs  possible_intersection.rs  segment_intersection.rs  signed_area.rs  subdivide_segments.rs  sweep_event.rs
src/geo2d/: mod.rs
