[package]
name = "pi_cg2d"
version = "0.3.0"
authors = ["yineng <dev@dev.com>"]
edition = "2021"
description = "cg2d"
repository = "https://github.com/GaiaWorld/pi_cg2d.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "cg2d"]

[dependencies]
pi_slab = "0.1"
pi_heap = "0.1"
pi_hash = "0.1"
pi_triangulation = "0.1"
num-traits = "0.2"
parry2d = "0.13"
log = "0.4"

[dev-dependencies]
rand = "0.8"